# vulkan-graphics

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  CMakeUtils.cmake
.github/workflows/: build.yaml
cmake/: binary_embed.template.S
src/: app.cpp  app.hpp  assets.cpp  assets.hpp  glfw_controller.cpp  glfw_controller.hpp  main.cpp  main_utils.hpp  shaders.cpp  shaders.hpp  vulkan_application.cpp  vulkan_application.hpp
src/shaders/: shader.frag  shader.vert
src/vulkan_app/: vulkan_app.cpp  vulkan_app.hpp
src/vulkan_app/app/: create_buffers.cpp  create_buffers.hpp  create_funcs.cpp  create_funcs.hpp  create_pipeline.cpp  create_pipeline.hpp  data_aggregator.hpp  draw_frame.cpp  draw_frame.hpp  frame_state.hpp  image_loaders.cpp  image_loaders.hpp  uniform_buffer_object.hpp  vertex.hpp
src/vulkan_app/vki/: base.cpp  base.hpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  memory.cpp  memory.hpp  physical_device.cpp  physical_device.hpp  pipeline_layout.cpp  pipeline_layout.hpp  queue.cpp  queue.hpp  queue_family.cpp  queue_family.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  (+17 more)
